// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StorytellingSignature snapshots matches snapshot with a single author 1`] = `
<DocumentFragment>
  <div
    class="flex flex-column justify-center items-center w-full"
  >
    <span
      data-testid="author"
    >
      Jane Doe
    </span>
  </div>
</DocumentFragment>
`;

exports[`StorytellingSignature snapshots matches snapshot with a subheadline on mobile 1`] = `
<DocumentFragment>
  <div
    class="flex flex-column justify-center items-center w-full"
  >
    <p
      class="font-secondary text-body-lg mb-24 md:hidden text-center"
    >
      Un copete de prueba para mobile
    </p>
    <span
      data-testid="author"
    >
      Jane Doe
    </span>
  </div>
</DocumentFragment>
`;

exports[`StorytellingSignature snapshots matches snapshot with multiple authors 1`] = `
<DocumentFragment>
  <div
    class="flex flex-column justify-center items-center w-full"
  >
    <span
      data-testid="author"
    >
      Jane Doe, John Smith
    </span>
  </div>
</DocumentFragment>
`;

exports[`StorytellingSignature snapshots matches snapshot with no authors 1`] = `<DocumentFragment />`;
